Most of part1 finished

--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,11 @@
 .choresText {
-   color: black;
+   color: rgb(163, 23, 23);
+   font-family: fantasy;
+   font-style: italic;
 }
 
 .choresHeading {
-   color: black;
+   color: rgb(225, 30, 30);
+   font-family: cursive;
+   text-decoration: underline;
 }
